--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.5.0",
     "aws-sdk": "^2.1448.0",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "cornerstone-core": "^2.6.1",
     "dayjs": "^1.11.7",
     "dicomweb-client": "^0.10.3",
@@ -29,6 +30,7 @@
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.1",
+    "react-s3": "^1.3.1",
     "react-slick": "^0.29.0",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
