--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.1",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@ckeditor/ckeditor5-upload": "^39.0.1",
     "antd": "^5.5.0",
     "aws-sdk": "^2.1448.0",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
+    "ckeditor5": "^39.0.1",
     "cornerstone-core": "^2.6.1",
     "dayjs": "^1.11.7",
     "dicomweb-client": "^0.10.3",
