--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-slick": "^0.29.0",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
