--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dwv": "^0.32.1",
     "emoji-picker-react": "^4.4.10",
     "file-saver": "^2.0.5",
+    "html2pdf.js": "^0.10.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "orthanc-client": "^0.10.5",
