--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.11.1",
     "react-s3": "^1.3.1",
     "react-slick": "^0.29.0",
