--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "buffer": "^6.0.3",
     "ckeditor5": "^39.0.1",
     "cornerstone-core": "^2.6.1",
+    "cryptography": "^1.2.3",
     "dayjs": "^1.11.7",
     "dicomweb-client": "^0.10.3",
     "dwv": "^0.32.1",
