--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "emoji-picker-react": "^4.4.10",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
