--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "mammoth": "^1.7.0",
     "moment": "^2.29.4",
     "orthanc-client": "^0.10.5",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
