--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
       with:
         host: ${{ secrets.PUBLIC_IP }}
         username: root
-        password: ${{ secrets.SSH_PASSWORD }}
+        key: ${{ secrets.DEPLOY_KEY }}
         port: 22
         script: |
-          cd /var/www/html/DICOM-Website
+          cd /home/ubuntu/DICOM-frontend/DICOM-Website
           git pull origin main
-          npm install
-          npm run build
+          docker-compose down
+          docker-compose up --build -d
