--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: ${{ secrets.PUBLIC_IP }}
+        host: ${{ secrets.HOST }}
         username: root
         key: ${{ secrets.DEPLOY_KEY }}
         port: 22
