--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ubuntu
-        key: ${{ secrets.DEPLOY_KEY }}
+        password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         script: |
-          cd /home/ubuntu/DICOM-frontend/DICOM-Website
+          cd /root/DICOM-frontend/DICOM-Website
           git pull origin main
           docker-compose down
           docker-compose up --build -d
